<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_10dp"
        app:cardCornerRadius="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_movie"
                android:contentDescription="@string/title_movie"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_movie"
                android:text="@string/app_name"
                android:lines="2"
                android:padding="5dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_movie_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_movie_title"
                android:gravity="end"
                android:text="@string/title_home"
                android:padding="5dp"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>