<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    style="@style/Widget.MaterialComponents.BottomAppBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BottomAppBarClass">

    <android.support.design.bottomappbar.BottomAppBar
        android:id="@+id/bottom_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorPrimary"
        app:fabAttached="true"
        app:fabCradleVerticalOffset="22dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/fab"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        app:layout_anchor="@+id/bottom_appbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.button.MaterialButton
                android:id="@+id/center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:text="@string/center"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="0dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/end"
                style="?android:attr/imageButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:text="@string/end"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="0dp" />


            <ToggleButton
                android:id="@+id/attach_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:background="@color/colorPrimaryDark"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textOff="@string/fab_show"
                android:textOn="@string/fab_hide" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        app:behavior_hideable="true"
        android:visibility="gone"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>